third_party/move/move-prover/tests/sources/functional/verify_custom_table.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:249:9
    │
249 │         ensures spec_get(result.t, k1) == 23;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:245: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:246: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:242: add_R_fail
    =     at tests/sources/functional/verify_custom_table.move:223: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:224: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:225: make_R
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:226: make_R
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:227: make_R
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:243: add_R_fail
    =     at tests/sources/functional/verify_custom_table.move:247: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:248: add_R_fail (spec)
    =     at tests/sources/functional/verify_custom_table.move:249: add_R_fail (spec)

error: post-condition does not hold
   ┌─ tests/sources/functional/verify_custom_table.move:74:9
   │
74 │         ensures spec_get(result, 1) == 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/verify_custom_table.move:67: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:68: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:69: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:70: add_fail
   =         t = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:71: add_fail
   =         result = <redacted>
   =     at tests/sources/functional/verify_custom_table.move:72: add_fail
   =     at tests/sources/functional/verify_custom_table.move:74: add_fail (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:199:9
    │
199 │         ensures result == spec_new();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:194: create_and_insert_fail1
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:195: create_and_insert_fail1
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:196: create_and_insert_fail1
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:197: create_and_insert_fail1
    =     at tests/sources/functional/verify_custom_table.move:199: create_and_insert_fail1 (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:208:9
    │
208 │         ensures result == spec_set(spec_new(), 1, 2);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:203: create_and_insert_fail2
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:204: create_and_insert_fail2
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:205: create_and_insert_fail2
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:206: create_and_insert_fail2
    =     at tests/sources/functional/verify_custom_table.move:208: create_and_insert_fail2 (spec)

error: post-condition does not hold
    ┌─ tests/sources/functional/verify_custom_table.move:190:9
    │
190 │         ensures result == spec_set(spec_new(), 1, 2);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/verify_custom_table.move:182: create_and_insert_fail_due_to_typed_key_encoding
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:183: create_and_insert_fail_due_to_typed_key_encoding
    =         t = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:184: create_and_insert_fail_due_to_typed_key_encoding
    =         result = <redacted>
    =     at tests/sources/functional/verify_custom_table.move:185: create_and_insert_fail_due_to_typed_key_encoding
    =     at tests/sources/functional/verify_custom_table.move:190: create_and_insert_fail_due_to_typed_key_encoding (spec)
